2007-08-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/dlvhex.cpp: Fix compile-time warnings.
	* src/dlvhex/Rule.cpp: Likewise.
	* src/dlvhex/HexParser.ypp: Likewise.
	* examples/Makefile.am: Likewise.

	* examples/tests/namespace1.out: Fix answer sets.

	* examples/tests/weak1r.out: New file.

2007-08-16  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* NEWS: updated.
	* configure.ac: bumbed to version 1.7.0

2007-07-19  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* src/dlvhex/ExternalAtom.cpp (initReplAux): Replacement bug for uppercase
	extatom names fixed.
	* src/dlvhex/dlvhex.cpp (insertNamespaces): namespace handling for new URI
	formats fixed. Backtranslation now broken.

2007-07-18  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/Atom.h: Improved documentation.
	* include/dlvhex/AtomSet.h: Likewise.
	* include/dlvhex/Term.h: Likewise.
	* include/dlvhex/PluginInterface.h: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.

	* src/dlvhex/ExternalAtom.cpp: Relaxed extatom input checking for
	tuple-inputs.
	* src/dlvhex/PluginInterface.cpp: Likewise.

2007-05-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Add emacs local variables at the end of each source file.

2007-05-29  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* Makefile.am: AUTOMAKE_OPTIONS = gnu.
	* include/dlvhex/Makefile.am: Likewise.
	* include/testsuite/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/Makefile.am: Likewise.
	* src/testsuite/dlvhex/Makefile.am: Likewise.

2007-05-25  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* COPYING: Added GPL license.
	* all source files: Likewise.

2007-05-24  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* AUTHORS: new file.
	* INSTALL: new file.
	* NEWS: new file.
	* README: Improved docs.

	* Makefile.am: Added --foreign option.

	* bootstrap.sh: Using reconfigure now instead of single autotools.

	* configure.ac: Bumped version to 1.6.0.

	* examples/tests/dlvhextests.test: Added test for reverse ordering. Added