@@ -1,0 +1,9 @@
+b(u).
+b(v).
+c(u).
+d(v).
+c(e).
+d(e).
+a(X) :- b(X), c(X).
+a(X) :- b(X), d(X).
+a(X) :- c(X), d(X).
