@@ -1,3 +1,12 @@
+2007-08-25  Roman Schindlauer  <roman@kr.tuwien.ac.at>
+
+	* examples/simple1.hex: Added.
+	* examples/tests/dlvhextests.test: Added test.
+	* examples/tests/simple1.out: Added.
+
+	* src/dlvhex/AtomNode.cpp: Corrected < operator of Dependency to take rule
+	into account.
+
 2007-08-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* src/dlvhex/dlvhex.cpp: Fix compile-time warnings.
